--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knockoutcity-tournament",
+  "name": "kocity-xyz",
   "version": "1.0.0",
   "description": "",
   "author": "Tandashi",
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "@twurple/api": "^6.2.1",
+    "@twurple/auth": "^6.2.1",
     "discord.js": "^14.11.0",
     "knockoutcity-auth-client": "^1.0.0-alpha.2",
+    "moment": "^2.29.4",
     "ts-dotenv": "^0.9.1",
     "typescript": "^5.1.3"
   },
