feat: Update `compose.yaml`

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,10 +9,19 @@ services:
       DISCORD_BOT_TOKEN: 
       DISCORD_BOT_CLIENT_ID:
       DISCORD_GUILD_ID:
-      DISCORD_ORGANIZER_ROLE_ID:
+      DISCORD_TOURNAMENT_ORGANIZER_ROLE_ID:
 
-      DISCORD_ORGANIZER_CHANNEL_ID:
-      DISCORD_SIGNUP_CHANNEL_ID:
+      DISCORD_TOURNAMENT_ORGANIZER_CHANNEL_ID:
+      DISCORD_TOURNAMENT_SIGNUP_CHANNEL_ID:
+
+      DISCORD_SERVER_STATUS_CHANNEL_ID:
+      DISCORD_SERVER_STATUS_MESSAGE_ID:
+      DISCORD_TWITCH_STREAM_CHANNEL_ID:
+      DISCORD_TWITCH_STREAM_MESSAGE_ID:
+      DISCORD_TWITCH_STREAM_NOTIFICATION_ROLE_ID:
+      
+      TWITCH_ID:
+      TWITCH_SECRET:
 
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/koc-tournament?schema=public
 
