feat: `compose.yaml` add new environment variables

--- a/compose.yaml
+++ b/compose.yaml
@@ -19,9 +19,11 @@ services:
       DISCORD_TWITCH_STREAM_CHANNEL_ID:
       DISCORD_TWITCH_STREAM_MESSAGE_ID:
       DISCORD_TWITCH_STREAM_NOTIFICATION_ROLE_ID:
-      
+      DISCORD_MESSAGE_UPDATE_INTERVAL: 120000
+
       TWITCH_ID:
       TWITCH_SECRET:
+      TWITCH_TRACKING_UPDATE_INTERVAL: 120000
 
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/koc-tournament?schema=public
 
