--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "knockoutcity-auth-client": "^1.0.0-alpha.2",
     "moment": "^2.29.4",
     "ts-dotenv": "^0.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
