feat!: User Embed uses Roles not and not hardcoded Ids
The hardcoded User Id's have been replaced by a role
check. Furthermore Content Squad Members also have
a special text now.

BREAKING CHANGE: There are now two new required Environment Variables
`DISCORD_CONTENT_SQUAD_ROLE_ID` and `DISCORD_DEVELOPER_ROLE_ID`

--- a/compose.yaml
+++ b/compose.yaml
@@ -19,6 +19,10 @@ services:
       DISCORD_TWITCH_STREAM_CHANNEL_ID:
       DISCORD_TWITCH_STREAM_MESSAGE_ID:
       DISCORD_TWITCH_STREAM_NOTIFICATION_ROLE_ID:
+
+      DISCORD_CONTENT_SQUAD_ROLE_ID:
+      DISCORD_DEVELOPER_ROLE_ID:
+
       DISCORD_MESSAGE_UPDATE_INTERVAL: 120000
 
       TWITCH_ID:
