--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prisma/client": "^4.15.0",
     "@twurple/api": "^6.2.1",
     "@twurple/auth": "^6.2.1",
+    "brackets-manager": "^1.5.8",
+    "brackets-prisma-db": "^1.0.0",
     "discord.js": "^14.11.0",
     "knockoutcity-auth-client": "^1.0.0-alpha.2",
     "moment": "^2.29.4",
