--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
+    "postinstall": "patch-package",
     "push-start": "npx prisma db push && node src/index.js",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
@@ -13,11 +14,12 @@
     "@prisma/client": "^4.15.0",
     "@twurple/api": "^6.2.1",
     "@twurple/auth": "^6.2.1",
-    "brackets-manager": "^1.5.9",
+    "brackets-manager": "^1.6.3",
     "brackets-prisma-db": "^1.0.1",
     "discord.js": "^14.11.0",
     "knockoutcity-auth-client": "^1.0.0-alpha.2",
     "moment": "^2.29.4",
+    "patch-package": "^7.0.2",
     "ts-dotenv": "^0.9.1",
     "typescript": "^5.1.3",
     "winston": "^3.9.0"
