--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "devDependencies": {
     "@types/node": "^20.3.0",
     "prisma": "^4.15.0"
+  },
+  "overrides": {
+    "brackets-manager": {
+      "brackets-model": "1.4.0"
+    }
   }
 }
