--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "brackets-prisma-db": "^1.0.1",
     "discord.js": "^14.11.0",
     "knockoutcity-auth-client": "^1.0.0-alpha.4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "patch-package": "^7.0.2",
     "ts-dotenv": "^0.9.1",
@@ -25,6 +26,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.196",
     "@types/node": "^20.3.0",
     "prisma": "^4.15.0"
   },
